force-app/main/default/objects/AccountScoutLog__c/AccountScoutLog__c.object-meta.xml
<CustomObject>
    <label>Account Scout Log</label>
    <pluralLabel>Account Scout Logs</pluralLabel>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>