force-app/main/default/objects/AccountScoutLog__c/fields/CitedRecordIds__c.field-meta.xml
<CustomField>
    <fullName>CitedRecordIds__c</fullName>
    <label>Cited Record IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>