force-app/main/default/objects/AccountScoutLog__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>refusal</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>