force-app/main/default/objects/AccountScoutLog__c/fields/TopicName__c.field-meta.xml
<CustomField>
    <fullName>TopicName__c</fullName>
    <label>Topic Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>