force-app/main/default/objects/AccountScoutLog__c/fields/UserQuery__c.field-meta.xml
<CustomField>
    <fullName>UserQuery__c</fullName>
    <label>User Query</label>
    <length>32768</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>